--- a/index-copy-2.html
+++ b/index-copy-2.html
@@ -41,8 +41,6 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
- 
-  
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17195519900">
   </script>
@@ -81,7 +79,6 @@
   src="https://www.facebook.com/tr?id=2582147495450756&ev=PageView&noscript=1"
   /></noscript>
   <!-- End Meta Pixel Code -->
-   
   
 </head>
 <body>
@@ -108,33 +105,10 @@
   <div class="hero">
       <div class="hero-containers">
         <div class="container">
-          <h1 data-aos="fade-down" data-aos-duration="1000">Liberte-se das Feridas Emocionais que Ainda Te Prendem ao Passado</h1>
-          <p data-aos="fade-up" data-aos-duration="1000">Sessões terapêuticas online com Leandro Morais, Psicanalista, Hipnoterapeuta e Especialista em PNL</p>
-          <ul class="positive-infos">
-            <li>
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-camera-video-fill" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M0 5a2 2 0 0 1 2-2h7.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 4.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 13H2a2 2 0 0 1-2-2z"/>
-            </svg>
-              Online em todo o Brasil
-            </li>
-            <li>
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-fill" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999zm2.493 8.574a.5.5 0 0 1-.411.575c-.712.118-1.28.295-1.655.493a1.3 1.3 0 0 0-.37.265.3.3 0 0 0-.057.09V14l.002.008.016.033a.6.6 0 0 0 .145.15c.165.13.435.27.813.395.751.25 1.82.414 3.024.414s2.273-.163 3.024-.414c.378-.126.648-.265.813-.395a.6.6 0 0 0 .146-.15l.015-.033L12 14v-.004a.3.3 0 0 0-.057-.09 1.3 1.3 0 0 0-.37-.264c-.376-.198-.943-.375-1.655-.493a.5.5 0 1 1 .164-.986c.77.127 1.452.328 1.957.594C12.5 13 13 13.4 13 14c0 .426-.26.752-.544.977-.29.228-.68.413-1.116.558-.878.293-2.059.465-3.34.465s-2.462-.172-3.34-.465c-.436-.145-.826-.33-1.116-.558C3.26 14.752 3 14.426 3 14c0-.599.5-1 .961-1.243.505-.266 1.187-.467 1.957-.594a.5.5 0 0 1 .575.411"/>
-            </svg>
-              Presencial em Caratinga-MG
-            </li>
-            <li>
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
-              <path d="M15.545 6.558a9.4 9.4 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.7 7.7 0 0 1 5.352 2.082l-2.284 2.284A4.35 4.35 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.8 4.8 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.7 3.7 0 0 0 1.599-2.431H8v-3.08z"/></svg>
-              Avaliações 5.0
-            </li>
-          </ul>
-          <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp" data-aos="zoom-in-up" data-aos-duration="1000">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-              <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
-            </svg> 
-            Clique e agende sua sessão no WhatsApp
-          </a>
+      <h1 data-aos="fade-down" data-aos-duration="1000">Vença Suas Feridas Emocionais e Viva Relacionamentos Mais Leves e Saudáveis</h1>
+      <p data-aos="fade-up" data-aos-duration="1000">Sessões terapêuticas online com Leandro Morais, Psicanalista, Hipnoterapeuta e Especialista em PNL</p>
+      <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+" target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp" data-aos="zoom-in-up" data-aos-duration="1000">Clique e agende sua sessão no WhatsApp</a>
       </div>
       <img src="./assets/leandro-morais-1.svg" alt="Foto de Leandro Morais, Psicanalista Terapeuta" data-aos="fade-up" data-aos-duration="1000">
       </div>
@@ -164,12 +138,6 @@
         <h3>Integrar saúde emocional com espiritualidade </h3>
       </div>
     </div>
-    <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp" data-aos="zoom-in-up" data-aos-duration="1000">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-              <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
-            </svg> 
-            AGENDE SUA TERAPIA NO WHATSAPP
-          </a>
   </section>
 
   
@@ -189,12 +157,7 @@
         <p>
           Psicanalista clínico, hipnoterapeuta, especialista em PNL, bacharel em Teologia, músico e maestro. Com uma abordagem acolhedora e integrativa, Leandro promove equilíbrio emocional e espiritual com foco em adultos que enfrentam conflitos internos, relacionais e espirituais.
         </p>
-        <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp" data-aos="zoom-in-up" data-aos-duration="1000">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-              <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
-            </svg> 
-            QUERO COMEÇAR A MINHA TERAPIA
-          </a>
+        <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" id="btnWhatsApp" onclick="fbq('track', 'Contact');" class="btn"  data-aos="zoom-in-up" data-aos-duration="1400">Quero começar minha transformação emocional</a>
       </div>
     </div>
     </div>
@@ -210,12 +173,8 @@
       <video class="video-normal" src="./assets/video/leandro-morais-video.mp4" controls ></video>
 
     </div>
-    <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp" data-aos="zoom-in-up" data-aos-duration="1000">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-              <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
-            </svg> 
-            Agende sua sessão no WhatsApp
-    </a>
+    <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+" target="_blank" class="btn" id="btnWhatsApp" onclick="fbq('track', 'Contact');">Agende sua sessão no WhatsApp</a>
   </section>
 
   <section class="problemas-section first-section" id="terapia">
@@ -261,12 +220,8 @@
         </div>
       </div>
     </div>
-    <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp" data-aos="zoom-in-up" data-aos-duration="1000">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-              <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
-            </svg> 
-            QUERO AGENDAR MINHA TERAPIA
-          </a>
+    <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+  " target="_blank" class="btn" id="btnWhatsApp" onclick="fbq('track', 'Contact');">Agende sua sessão no WhatsApp</a>
   </section>
 
   <section class="problemas-section second-section" id="second-section>
@@ -315,17 +270,13 @@
         </div>
         
       </div>
-    <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp" data-aos="zoom-in-up" data-aos-duration="1000">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-              <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
-            </svg> 
-            QUERO AGENDAR MINHA TERAPIA
-          </a>
+    <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+    " target="_blank" class="btn" id="btnWhatsApp" onclick="fbq('track', 'Contact');">Agende sua sessão no WhatsApp</a>
   </section>
 
 
   <div class="elfsight-app-aa07635d-993c-4556-a380-b4a701fb44f4 elfsight" id="avaliation" data-elfsight-app-lazy>
-    
+
   </div>  
 
   <section class="psiterapia" id="terapia-online">
@@ -343,12 +294,10 @@
           Você pode escolher entre sessões online, no conforto da sua casa, ou presenciais, em um ambiente acolhedor e preparado para o seu bem-estar.
         </p>
 
-        <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp" data-aos="zoom-in-up" data-aos-duration="1000">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-              <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
-            </svg> 
-            AGENDE SUA TERAPIA NO WHATSAPP
-          </a>
+        <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+  " target="_blank" class="btn" id="btnWhatsApp" onclick="fbq('track', 'Contact');" class="btn">
+          Agende sua Terapia Pelo WhatsApp
+        </a>
 
       </div>
     </div>
@@ -427,7 +376,6 @@
   <script> AOS.init() </script>
   <!-- Elfsight Google Reviews | Untitled Google Reviews -->
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
 </body>
 </html>
