--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     gtag('js', new Date());
 
     gtag('config', 'G-LB9TXXWNFF');
+    gtag('config', 'AW-17195519900');
   </script>
 
    <!-- Meta Pixel Code -->
