--- a/index.html
+++ b/index.html
@@ -82,7 +82,23 @@
   src="https://www.facebook.com/tr?id=2582147495450756&ev=PageView&noscript=1"
   /></noscript>
   <!-- End Meta Pixel Code -->
-   
+   <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1144336011021833');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1144336011021833&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
   
 </head>
 <body>
@@ -130,7 +146,7 @@
               Avaliações 5.0
             </li>
           </ul>
-          <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp" data-aos="zoom-in-up" data-aos-duration="1000">
+          <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp">
             
             Cuidar de você começa aqui
 
