--- a/index.html
+++ b/index.html
@@ -134,12 +134,7 @@ src="https://www.facebook.com/tr?id=1144336011021833&ev=PageView&noscript=1"
             </svg>
               Online em todo o Brasil
             </li>
-            <li>
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-fill" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999zm2.493 8.574a.5.5 0 0 1-.411.575c-.712.118-1.28.295-1.655.493a1.3 1.3 0 0 0-.37.265.3.3 0 0 0-.057.09V14l.002.008.016.033a.6.6 0 0 0 .145.15c.165.13.435.27.813.395.751.25 1.82.414 3.024.414s2.273-.163 3.024-.414c.378-.126.648-.265.813-.395a.6.6 0 0 0 .146-.15l.015-.033L12 14v-.004a.3.3 0 0 0-.057-.09 1.3 1.3 0 0 0-.37-.264c-.376-.198-.943-.375-1.655-.493a.5.5 0 1 1 .164-.986c.77.127 1.452.328 1.957.594C12.5 13 13 13.4 13 14c0 .426-.26.752-.544.977-.29.228-.68.413-1.116.558-.878.293-2.059.465-3.34.465s-2.462-.172-3.34-.465c-.436-.145-.826-.33-1.116-.558C3.26 14.752 3 14.426 3 14c0-.599.5-1 .961-1.243.505-.266 1.187-.467 1.957-.594a.5.5 0 0 1 .575.411"/>
-            </svg>
-              Presencial em Caratinga-MG
-            </li>
+            
             <li>
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
               <path d="M15.545 6.558a9.4 9.4 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.7 7.7 0 0 1 5.352 2.082l-2.284 2.284A4.35 4.35 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.8 4.8 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.7 3.7 0 0 0 1.599-2.431H8v-3.08z"/></svg>
@@ -389,7 +384,8 @@ src="https://www.facebook.com/tr?id=1144336011021833&ev=PageView&noscript=1"
   </section>
 
   <section class="problemas-section second-section" id="second-section>
-    <div class="problemas-header">
+      <div class="container">
+        <div class="problemas-header">
         <h2>A terapia proporcionará a sua saúde mental diversos benefícios como esses:</h2>
         <p id="p22">
           São inúmeros os benefícios que nossos pacientes recebem com nossa terapia focada na remoção daquilo que não pertence ao paciente
@@ -440,6 +436,7 @@ src="https://www.facebook.com/tr?id=1144336011021833&ev=PageView&noscript=1"
             </svg> 
           
           </a>
+      </div>
   </section>
 
   
@@ -547,6 +544,17 @@ Se há vagas disponíveis agora, aproveite.
       <p>Caratinga - Minas Gerais</p>
     </div>
   </footer>
+  <a
+  href="https://wa.me/5531998648339?text=Olá! Gostaria de agendar uma sessão."
+  target="_blank"
+  class="whatsapp-float"
+>
+  <img
+    src="./assets/icons/whatssapp.svg"
+    alt="WhatsApp"
+  />
+</a>
+
 
   <script src="script.js"></script>
   <script> AOS.init() </script>
