alterações na pagina

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ src="https://www.facebook.com/tr?id=1144336011021833&ev=PageView&noscript=1"
           O atendimento é adaptado às suas necessidades emocionais, proporcionando um espaço seguro para autoconhecimento, transformação e equilíbrio interior.  
         </p>
         <p>
-          Você pode escolher entre sessões online, no conforto da sua casa, ou presenciais, em um ambiente acolhedor e preparado para o seu bem-estar.
+          As sessões terapeuticas são online, no conforto da sua casa, mantendo o sigilo e melhor para o seu bem-estar.
         </p>
 
         <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp" data-aos="zoom-in-up" data-aos-duration="1000">
